--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Format
         run: |
           make format
-      - namw: Containerise
+      - name: Containerise
         runs:
           using: 'docker'
           image: 'Dockerfile'
