--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         with:
             context: .
             push: true
-            tags: github-actions-app:latest
+            tags: navanith7/github-actions-app:latest
